<resources>
    <string name="app_name">HikerHub</string>
    <string name="channel_name">Notification Name</string>
    <string name="channel_description">Notification Channel for the demo app</string>
    <string name="channel_id">Channel_Name_NUMAD_demo</string>
    <string name="send_notification_text">Send Android Notification</string>
    <string name="google_map_key">AIzaSyDe1QJKCvZLVqBASBVxsr4ACADN4_ubl6Q</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cd_home">Home</string>
    <string name="cd_posts">Posts</string>
    <string name="cd_navigation">Navigation</string>
    <string name="cd_profile">Profile</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_posts">Posts</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="create_new_post">Create new post</string>
    <string name="post_title">Post title</string>
    <string name="post_content">Post content</string>
    <string name="submit_post">Submit</string>
    <string name="error_title_empty">Please add your title</string>
    <string name="error_content_empty">Please add your content</string>
    <string name="post_created">Your post is created</string>
    <string name="select_category">Select Trail</string>
    <string name="post_creation_failed">Post creation failed</string>
    <string name="error_category_empty">Please select your category</string>
    <string name="recommended">Do you recommend this trail?</string>
    <string name="user_name">User name</string>
    <string-array name="hiking_level">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
</resources>