<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:text="@string/create_new_post"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:prompt="@string/select_category" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_post_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/post_content"
            app:counterEnabled="true"
            app:counterMaxLength="5000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Add this CheckBox inside the LinearLayout -->
        <CheckBox
            android:id="@+id/checkbox_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recommended" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit_post" />

    </LinearLayout>
</ScrollView>
